@@ -1,9 +1,7 @@
 package com.LMS.Learning_Management_System.service;
 
-import com.LMS.Learning_Management_System.dto.LessonDto;
 import com.LMS.Learning_Management_System.dto.StudentDto;
 import com.LMS.Learning_Management_System.entity.*;
-import com.LMS.Learning_Management_System.service.LessonService;
 import com.LMS.Learning_Management_System.repository.CourseRepository;
 import com.LMS.Learning_Management_System.repository.EnrollmentRepository;
 import com.LMS.Learning_Management_System.repository.StudentRepository;
@@ -12,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class EnrollmentService {
@@ -20,6 +17,7 @@ public class EnrollmentService {
     private final StudentRepository studentRepository;
     private final CourseRepository courseRepository;
 
+    private static final String STUDENT_NOT_ENROLLED_MESSAGE = "Student is not enrolled in this course.";
 
     public EnrollmentService(EnrollmentRepository enrollmentRepository, StudentRepository studentRepository, CourseRepository courseRepository) {
         this.enrollmentRepository = enrollmentRepository;
@@ -42,7 +40,7 @@ public class EnrollmentService {
 
         int courseId = enrollmentRequest.getCourse().getCourseId();
         Course course = courseRepository.findById(courseId)
-                .orElseThrow(() -> new IllegalArgumentException("No course found with the given ID: " + courseId));
+                .orElseThrow(() -> new IllegalArgumentException(STUDENT_NOT_ENROLLED_MESSAGE + courseId));
 
         boolean isEnrolled = enrollmentRepository.existsByStudentAndCourse(student, course);
         if (isEnrolled) {
@@ -58,9 +56,9 @@ public class EnrollmentService {
     }
 
     public List<StudentDto> viewEnrolledStudents(int courseId, HttpServletRequest request){
-        Course course = check_course_before_logic(courseId , request);
+        Course course = checkCourseBeforeLogic(courseId , request);
         List<Enrollment>enrollments = enrollmentRepository.findByCourse(course);
-        List<Student> students = new ArrayList<Student>();
+        List<Student> students = new ArrayList<>();
         for (Enrollment enrollment : enrollments) {
             students.add(enrollment.getStudent());
         }
@@ -74,11 +72,11 @@ public class EnrollmentService {
                         student.getFirstName(),
                         student.getLastName()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void removeEnrolledStudent(int courseId, int studentId, HttpServletRequest request){
-        Course course = check_course_logic(courseId , request);
+        Course course = checkCourseLogic(courseId , request);
         Student student = studentRepository.findById(studentId)
                 .orElseThrow(() -> new IllegalArgumentException("No student found with the given ID."));
         boolean isEnrolled = enrollmentRepository.existsByStudentAndCourse(student, course);
@@ -89,8 +87,7 @@ public class EnrollmentService {
         enrollmentRepository.deleteById(enrollment.getEnrollmentId());
     }
 
-
-    private Course check_course_before_logic(int courseId, HttpServletRequest request)
+    private Course checkCourseBeforeLogic(int courseId, HttpServletRequest request)
     {
         //Both Admin and Instructor can access
         Users loggedInUser = (Users) request.getSession().getAttribute("user");
@@ -101,7 +98,7 @@ public class EnrollmentService {
             throw new IllegalArgumentException("Logged-in user is not an Instructor or Admin.");
         }
         Course existingCourse = courseRepository.findById(courseId)
-                .orElseThrow(() -> new IllegalArgumentException("No course found with the given ID: " + courseId));
+                .orElseThrow(() -> new IllegalArgumentException(STUDENT_NOT_ENROLLED_MESSAGE + courseId));
 
         if (loggedInUser.getUserTypeId().getUserTypeId() == 3 &&
                 existingCourse.getInstructorId().getUserAccountId() != loggedInUser.getUserId()) {
@@ -110,18 +107,13 @@ public class EnrollmentService {
         return existingCourse;
     }
 
-    private Course check_course_logic(int courseId, HttpServletRequest request)
+    private Course checkCourseLogic(int courseId, HttpServletRequest request)
     {
         //only Instructor can access
         Users loggedInInstructor = (Users) request.getSession().getAttribute("user");
-        if (loggedInInstructor == null) {
-            throw new IllegalArgumentException("No user is logged in.");
-        }
-        if (loggedInInstructor.getUserTypeId() == null || loggedInInstructor.getUserTypeId().getUserTypeId() != 3) {
-            throw new IllegalArgumentException("Logged-in user is not an instructor.");
-        }
+        LessonService.validateUserId(request);
         Course existingCourse = courseRepository.findById(courseId)
-                .orElseThrow(() -> new IllegalArgumentException("No course found with the given ID: " + courseId));
+                .orElseThrow(() -> new IllegalArgumentException(STUDENT_NOT_ENROLLED_MESSAGE + courseId));
 
         if (existingCourse.getInstructorId() == null ||
                 existingCourse.getInstructorId().getUserAccountId() != loggedInInstructor.getUserId()) {
